--- a/src/routes/singlePage/singlePage.scss
+++ b/src/routes/singlePage/singlePage.scss
@@ -1,8 +1,22 @@
+@import "../../responseive.scss";
 .singlePage{
     display: flex;
     height: 100%;
+    @include md{
+        flex-direction: column;
+        gap:15px;
+        padding-bottom: 15px;
+        overflow: scroll;
+
+    }
     .details{
         flex: 3;
+        height: 100%;
+        overflow-y: scroll;
+        @include md{
+            flex:none;
+            height: max-content;
+        }
         .wrapper{
             padding-right: 50px;
             .info{
@@ -69,8 +83,87 @@
     .features{
         flex: 2;
         background-color: #fcf5f3;
+        height: 100%;
+        overflow-y: scroll;
+        @include md{
+            flex:none;
+            height: max-content;
+        }
         .wrapper{
             padding: 0 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            img{
+                width: 24px;
+                height: 24px;
+            }
+            .title{
+                font-weight: bold;
+                margin-bottom: 10px;
+                font-size: 18px;
+                color: #555;
+            }
+            .feature{
+                display: flex;
+                align-items: center;
+                gap: 10px;
+                img{
+                    background-color:#e887d4 ;
+                }
+                .featureText{
+                    span{
+                        font-weight: bold;
+                    }
+                    p{
+                        font-size: 14px;
+                    }
+                }
+
+            }
+            .listVertical{
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+                background-color: white;
+                padding: 20px 10px;
+                border-radius: 10px;
+            }
+            .sizes{
+                display: flex;
+                justify-content: space-between;
+                @include lg{
+                    font-size:12px ;
+                }
+                .size{
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
+                    padding: 10px;
+                    border-radius: 5px;
+                    background-color: #fff;
+
+                }
+            }
+            .mapContainer{
+                width: 100%;
+                height: 200px;
+            }
+            .buttons{
+                    padding: 20px;
+                    display: flex;
+                    align-items: center;
+                    gap: 5px;
+                    background-color: white;
+                    border: 1px solid #e887d4;
+                    color: #e887d4;
+                    cursor: pointer;
+                    border-radius: 5px;
+                    transition: all .3s ease;
+                    &:hover{
+                        background-color: #f8ccef;
+                    }
+            }
         }
     }
 }
