--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -1,9 +1,13 @@
+@import "../../responseive.scss";
 .card{
     display: flex;
     gap: 20px;
     .imageContainer{
         flex: 2;
         height: 200;
+        @include sm{
+            display: none;
+        }
         img{
             width: 100%;
             height: 100%;
