--- a/src/routes/listPage/listPage.scss
+++ b/src/routes/listPage/listPage.scss
@@ -11,6 +11,11 @@
         gap: 50px;
         overflow-y: scroll;
         padding-bottom: 50px;
+        .loader{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
      }
     }
     .mapContainer{
