--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -65,6 +65,7 @@ nav{
                 margin-right: 20px;
             }
             span{
+                cursor: pointer;
                 @include sm{
                     display: none;
                 }
