--- a/src/routes/profileUpdatePage/profileUpdatePage.scss
+++ b/src/routes/profileUpdatePage/profileUpdatePage.scss
@@ -1,13 +1,28 @@
 @import "../../responseive.scss";
 .profileUpdatePage{
     display: flex;
+    height: 100%;
+    @include md{
+        flex-direction: column;
+        overflow-y: scroll;
+    }
     .formContainer{
         flex: 3;
         display: flex;
         align-items: flex-start;
         justify-content: center;
+        @include md{
+           flex: none;
+        }
+        @include sm{
+            flex: none;
+         }
         h1{
-            color: #444;
+            color: #222;
+            @include md{
+                flex: none;
+                font-size: 20px;
+             }
 
         }
         .wrapper{
@@ -61,12 +76,16 @@
     .sideContainer{
         flex: 2;
         background-color: #fcf5f3;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         @include md{
-            display: none;
+           margin-bottom: 20px;
         }
         .wrapper{
             padding-right:20px ;
             padding-right:20px ;
+            width: 300px;
             img{
                 width: 100%;
         }
