--- a/src/components/filter/filter.scss
+++ b/src/components/filter/filter.scss
@@ -1,3 +1,4 @@
+@import "../../responseive.scss";
 .filter{
     display: filter;
     flex-direction: column;
@@ -26,13 +27,17 @@
     }
     .top{
         input{
-            width: 100%;
+            width: 80%;
         }
     }
     .bottom{
         display: flex;
         justify-content: space-between;
         gap: 20px;
+       @include sm{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+       }
         button{
             border: none;
             cursor: pointer;
