--- a/src/components/searchBar/searchBar.scss
+++ b/src/components/searchBar/searchBar.scss
@@ -1,14 +1,16 @@
 @import "../../responseive.scss";
 .searchBar{
-    .type{
-       
+    @include sm{
+        margin-bottom: 50px;
+    }
+    .type{     
         button{
             padding: 16px 36px;
             border: 1px solid #999;
             cursor: pointer;
             background-color: white;
             text-transform: capitalize;
-            border-bottom: none;
+            // border-bottom: none;
             &.active{
                 background-color: #A5678e;
             }
@@ -29,6 +31,26 @@
         justify-content: space-between;
         height: 64px;
         gap: 5px;
+        h2{
+            font-size: 20px;
+            color: #333;
+        }
+        .city-div{
+            display: grid;
+            grid-template-columns: repeat(2,1fr);
+            .city{  
+                display: flex;
+                align-items: center;
+                label{
+                    width: 50px;
+                    input{
+                        width: 100px;
+                        border-radius: 5px;
+                        background: #fae1f1;
+                    }
+                }
+            }
+        }
         @include sm{
             flex-direction: column;
             border: none;
