Home page tweaking

--- a/src/components/searchBar/searchBar.scss
+++ b/src/components/searchBar/searchBar.scss
@@ -2,6 +2,7 @@
 .searchBar{
     @include sm{
         margin-bottom: 50px;
+        // overflow-x: scroll;
     }
     .type{     
         button{
