--- a/src/routes/layout/layout.scss
+++ b/src/routes/layout/layout.scss
@@ -20,6 +20,10 @@
     }
     .content{
        height: calc(100vh - 100px);
+       @include sm{
+       margin-bottom:50px;
+       height: 100vh;
+      }
        
     }
 }
