--- a/src/components/searchBar/searchBar.scss
+++ b/src/components/searchBar/searchBar.scss
@@ -37,20 +37,19 @@
             color: #333;
         }
         .city-div{
-            display: grid;
-            grid-template-columns: repeat(2,1fr);
-            .city{  
-                display: flex;
-                align-items: center;
-                label{
-                    width: 50px;
-                    input{
-                        width: 100px;
-                        border-radius: 5px;
-                        background: #fae1f1;
-                    }
+            display:flex;
+            align-items: center;
+            justify-content: flex-start;
+            gap: 20px;
+            margin-bottom: 5px;
+            button{
+                padding: 10px 15px;
+                border: none;
+                &.selected{
+                    background-color: #A5678e; 
                 }
             }
+           
         }
         @include sm{
             flex-direction: column;
