Adding sonner popups

--- a/src/routes/homePage/homePage.scss
+++ b/src/routes/homePage/homePage.scss
@@ -35,6 +35,9 @@
                 @include sm{
                     display: none;
                 }
+                @include md{
+                    margin-top: 50px;
+                }
                 h1{
                     font-size: 36px;
                     @include lg{
