homepage code refactoring

--- a/src/routes/homePage/homePage.scss
+++ b/src/routes/homePage/homePage.scss
@@ -36,7 +36,7 @@
                     display: none;
                 }
                 @include md{
-                    margin-top: 50px;
+                    display: none;
                 }
                 h1{
                     font-size: 36px;
