--- a/src/components/map/map.scss
+++ b/src/components/map/map.scss
@@ -1,5 +1,10 @@
+@import "../../responseive.scss";
 .map{
     width: 100%;
     height: 100%;
     border-radius: 20px;
+    @include sm{
+       
+        padding-bottom: 40%;
+    }
 }
