Increasing page size

--- a/src/routes/homePage/homePage.scss
+++ b/src/routes/homePage/homePage.scss
@@ -21,6 +21,8 @@
             }
             @include sm{
                 justify-content: flex-start;
+                // height: 400px;
+                height: 140%;
             }
             .title{
                 font-size: 64px;
