--- a/src/routes/listPage/listPage.scss
+++ b/src/routes/listPage/listPage.scss
@@ -42,4 +42,20 @@
 
     }
     }
+    .scroll-btn{
+        position: fixed;
+        bottom: 0;
+        margin-bottom: 100px;
+        z-index: 9999;
+        right: 0;
+        margin-right: 20px;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        border: none;
+        background-color: #A5678e;
+        i{
+            font-weight: bold;
+        }
+    }
 }
